<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32sp"
    android:layout_marginVertical="16sp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/createAccountIcon"
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="582dp"
        app:srcCompat="@drawable/createacc" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="107dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/confirm_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/termscheckBox"
            android:layout_width="328dp"
            android:layout_height="42dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="12dp"
            android:text="@string/i_agree_the_terms_and_conditions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/primary"
            android:text="@string/create_account"
            android:textSize="16sp"
            app:backgroundTint="@color/primary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/form_layout"
        android:layout_marginTop="1dp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="647dp"
        android:layout_marginBottom="-1dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="170dp"
            android:layout_height="wrap_content"

            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/create_account_textView_btn"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>