<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32sp"
    android:layout_marginVertical="16sp"
    tools:context=".CreateAccountActivity">

    <ImageView
        android:id="@+id/createAccountIcon"
        android:layout_width="325dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="614dp"
        app:srcCompat="@drawable/login" />

    <LinearLayout
        android:id="@+id/form_layout"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="209dp"
        android:layout_marginBottom="160dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/forgot_password_textView_btn"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="230dp"
            android:text="@string/forgot_password"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/primary"
            android:text="@string/login_btn"
            android:textSize="16sp"
            app:backgroundTint="@color/primary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="550dp"
        android:layout_marginBottom="96dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <TextView
            android:id="@+id/create_account_textView_btn"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account_link"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>